--- a/DrawBallot/MainForm.resx
+++ b/DrawBallot/MainForm.resx
@@ -24888,4 +24888,7 @@
         U0XVp16c0rTVQeufXh0ZxfU+P+vTxNI4VpqoK/OnX//Z
 </value>
   </data>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>132, 17</value>
+  </metadata>
 </root>
